[package]
name = "video"
version = "0.1.0"
authors = ["Igor Boyarshin <igor.boyarshin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uvc = "0.1.6"
glium = "0.27.0"
# flate2 = "1.0.14"
flate2 = { version = "1.0.14", features = ["cloudflare_zlib"], default-features = false }
rand = "0.7.3"
